# uni_mobil_p

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
docs/: oas-3.0.0.json
front/: .eslintrc.js  README.md  package-lock.json  package.json
front/src/: App.vue  axios.js
front/src/components/: HelloWorld.vue  LoginView.vue
front/src/router/: index.js
front/src/views/: AboutView.vue  FavouriteView.vue  FormView.vue  HomeView.vue  RankingView.vue  RegisterView.vue
sql/: MIGRATE_mobil_001.sql  MIGRATE_postgres_001.sql
src/: App.cpp  AppComponent.hpp
src/controller/: MobilController.hpp
src/db/: MobilDatabase.hpp
src/dto/: DtoAdminComment_IN.hpp  DtoAdminVisit_IN.hpp  DtoAuth_DB.hpp  DtoComment_IN.hpp  DtoComment_OUT.hpp  DtoError.hpp  DtoPlace_IN.hpp  DtoPlace_OUT.hpp  DtoRegister_IN.hpp  DtoUser_IN.hpp  DtoUser_OUT.hpp  DtoVisit_OUT.hpp
src/enum/: EnumErrorType.hpp
src/service/: MobilService.cpp  MobilService.hpp
test/: tests.cpp
